
Changes in libuca 0.5.0
-----------------------

- Put work under LGPL 2.1