@@ -63,6 +63,7 @@ typedef struct uca_camera_priv {
     uint32_t (*stop_recording) (struct uca_camera_priv *cam);
     uint32_t (*trigger) (struct uca_camera_priv *cam);
     uint32_t (*register_callback) (struct uca_camera_priv *cam, uca_cam_grab_callback callback, void *user);
+    uint32_t (*release_buffer) (struct uca_camera_priv *cam, void *buffer);
     uint32_t (*grab) (struct uca_camera_priv *cam, char *buffer, void *meta_data);
     uint32_t (*readout) (struct uca_camera_priv *cam);
 
