@@ -3,3 +3,12 @@ Changes in libuca 0.5.0
 -----------------------
 
 - Put work under LGPL 2.1
+
+- Adapt cameras/ipe.c to support the current driver API
+
+- uca_cam_grab_callback()s have to return UCA_BUFFER_KEEP or UCA_BUFFER_RELEASE
+  now
+
+- New symbols:
+    - uca_cam_release_buffer()
+    
